[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-stash"
version = "0.1.0"
description = "Implementation of any kind of Deep Learning models, layers or algorithms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "tensorflow-datasets>=4.9.8",
    "tensorflow[and-cuda]==2.16.2",
]

[project.optional-dependencies]
interactive = [
    "jupyter>=1.1.1",
]

[tool.setuptools]
packages = ["dl_stash"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
